repair readme and add pickle

--- a/FashionMnistPart.ipynb
+++ b/FashionMnistPart.ipynb
@@ -2,26 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
     "from tensorflow.keras.datasets import fashion_mnist\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.model_selection import KFold\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score,KFold\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier,forest\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn import metrics\n",
     "from sklearn.svm import SVC\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten\n",
-    "from tensorflow.keras.datasets import fashion_mnist\n",
     "import xgboost as xgb\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -30,12 +25,13 @@
     "from sklearn import tree\n",
     "from sklearn.metrics import classification_report,confusion_matrix\n",
     "import seaborn as sn\n",
+    "import pickle\n",
     "import pandas.util.testing as tm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +54,7 @@
        "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,11 +68,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Labels\n",
+    "## Labels\n",
     "Each training and test example is assigned to one of the following labels:\n",
     "\n",
     "| Label | Description |\n",
-    "| --- | --- |\n",
+    "| :-------------------: |  :-------------------: |\n",
     "| 0 | T-shirt/top |\n",
     "| 1 | Trouser |\n",
     "| 2 | Pullover |\n",
@@ -243,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -264,20 +260,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PC0</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PC4</td>\n",
+       "      <td>742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PC5</td>\n",
+       "      <td>228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PC6</td>\n",
+       "      <td>396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PC7</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PC8</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PC9</td>\n",
+       "      <td>651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PC10</td>\n",
+       "      <td>740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>PC11</td>\n",
+       "      <td>749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PC12</td>\n",
+       "      <td>512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PC13</td>\n",
+       "      <td>541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PC14</td>\n",
+       "      <td>299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>PC15</td>\n",
+       "      <td>524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PC16</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PC17</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>PC18</td>\n",
+       "      <td>693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>PC19</td>\n",
+       "      <td>331</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0    1\n",
+       "0    PC0  150\n",
+       "1    PC1  414\n",
+       "2    PC2  398\n",
+       "3    PC3  680\n",
+       "4    PC4  742\n",
+       "5    PC5  228\n",
+       "6    PC6  396\n",
+       "7    PC7  104\n",
+       "8    PC8   46\n",
+       "9    PC9  651\n",
+       "10  PC10  740\n",
+       "11  PC11  749\n",
+       "12  PC12  512\n",
+       "13  PC13  541\n",
+       "14  PC14  299\n",
+       "15  PC15  524\n",
+       "16  PC16   15\n",
+       "17  PC17  184\n",
+       "18  PC18  693\n",
+       "19  PC19  331"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pca = PCA(n_components=20)\n",
-    "pca.fit(trainX)\n",
-    "X_pc = pca.transform(trainX)\n",
-    "n_pcs= pca.components_.shape[0]\n",
-    "most_important = [np.abs(pca.components_[i]).argmax() for i in range(n_pcs)]\n",
-    "initial_feature_names = range(28*28)\n",
-    "most_important_names = [initial_feature_names[most_important[i]] for i in range(n_pcs)]\n",
-    "dic = {'PC{}'.format(i): most_important_names[i] for i in range(n_pcs)}\n",
-    "\n",
-    "df = pd.DataFrame(dic.items())"
+    "def get_pcs(n_components):\n",
+    "    pca = PCA(n_components=n_components)\n",
+    "    pca.fit(trainX)\n",
+    "    X_pc = pca.transform(trainX)\n",
+    "    n_pcs= pca.components_.shape[0]\n",
+    "    most_important = [np.abs(pca.components_[i]).argmax() for i in range(n_pcs)]\n",
+    "    initial_feature_names = range(28*28)\n",
+    "    most_important_names = [initial_feature_names[most_important[i]] for i in range(n_pcs)]\n",
+    "    dic = {'PC{}'.format(i): most_important_names[i] for i in range(n_pcs)}\n",
+    "    df = pd.DataFrame(dic.items())\n",
+    "    return df\n",
+    "df = get_pcs(n_components=20)\n",
+    "df"
    ]
   },
   {
@@ -286,50 +444,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.75      0.74      0.74      1019\n",
-      "           1       0.94      0.93      0.94      1011\n",
-      "           2       0.71      0.68      0.69      1044\n",
-      "           3       0.78      0.81      0.79       960\n",
-      "           4       0.69      0.70      0.69       977\n",
-      "           5       0.75      0.81      0.78       923\n",
-      "           6       0.54      0.59      0.56       910\n",
-      "           7       0.76      0.74      0.75      1017\n",
-      "           8       0.90      0.87      0.89      1033\n",
-      "           9       0.91      0.82      0.86      1106\n",
-      "\n",
-      "    accuracy                           0.77     10000\n",
-      "   macro avg       0.77      0.77      0.77     10000\n",
-      "weighted avg       0.78      0.77      0.77     10000\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "filterd_features = df[1]\n",
-    "knn = KNeighborsClassifier(n_neighbors=5,p=1,weights=\"distance\")\n",
-    "knn.fit(trainX[:,filterd_features],trainY)\n",
-    "#dec_t = tree.DecisionTreeClassifier(random_state=0, max_depth=8).fit(trainX[:,filterd_features],trainY)\n",
-    "y_pred = knn.predict(testX[:,filterd_features])\n",
-    "print(classification_report(y_pred,testY))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17181d1f848>"
+       "<matplotlib.image.AxesImage at 0x2a500b33bc8>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,6 +467,7 @@
     }
    ],
    "source": [
+    "filterd_features = df[1]\n",
     "features = np.zeros(28*28,dtype=int)\n",
     "for i in filterd_features:\n",
     "    features[i]=255\n",
@@ -428,27 +549,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\magshimim\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "    kernel='poly', max_iter=-1, probability=False, random_state=None,\n",
-       "    shrinking=True, tol=0.001, verbose=False)"
+       "    decision_function_shape='ovr', degree=3, gamma='auto', kernel='poly',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1493,6 @@
     }
    ],
    "source": [
-    "######takes a loot of time dont tun it!!!!!!!!!##############\n",
     "param_list = [(\"eta\", 0.08), (\"max_depth\", 6), (\"subsample\", 0.8), (\"colsample_bytree\", 0.8), (\"objective\", \"multi:softmax\"), (\"eval_metric\", \"merror\"), (\"alpha\", 8), (\"lambda\", 2), (\"num_class\", 10)]\n",
     "n_rounds = 600\n",
     "early_stopping = 50\n",
@@ -1434,6 +1546,68 @@
    "outputs": [],
    "source": [
     "#predict_with_bias(bst,d_test,0.1,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_rf_samples(n):\n",
+    "    \"\"\" Changes Scikit learn's random forests to give each tree a random sample of\n",
+    "    n random rows.\n",
+    "    \"\"\"\n",
+    "    forest._generate_sample_indices = (lambda rs, n_samples:\n",
+    "        forest.check_random_state(rs).randint(0, n_samples, n))\n",
+    "\n",
+    "def reset_rf_samples():\n",
+    "    \"\"\" Undoes the changes produced by set_rf_samples.\n",
+    "    \"\"\"\n",
+    "    forest._generate_sample_indices = (lambda rs, n_samples:\n",
+    "        forest.check_random_state(rs).randint(0, n_samples, n_samples))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=0.95)\n",
+    "pca.fit(trainX)\n",
+    "most_important = [np.abs(pca.components_[i]).argmax() for i in range(pca.components_.shape[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 16 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.85"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_rf_samples(5000)\n",
+    "clf = RandomForestClassifier(n_estimators=100,max_depth=100)\n",
+    "%time clf.fit(trainX,trainY)\n",
+    "print(clf.score(testX,testY))\n",
+    "reset_rf_samples()"
    ]
   },
   {
@@ -2047,6 +2221,24 @@
     "model4.fit(x_train, y_train, epochs=10, validation_split=0.1)\n",
     "_, test_acc = model4.evaluate(x_test, y_test)\n",
     "print(test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save For Next Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"UsefullFunctions.d\",\"wb\")\n",
+    "funcs = {\"pca\":get_pcs,\"set_rf\":set_rf_samples,\"reset_rf\":reset_rf_samples}\n",
+    "pickle.dump(funcs,file)"
    ]
   },
   {
