--- a/StateDetctionPart.ipynb
+++ b/StateDetctionPart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import glob\n",
-    "import pandas.util.testing as tm"
+    "from sklearn.decomposition import PCA\n",
+    "import pandas.util.testing as tm\n",
+    "import pickle"
    ]
   },
   {
@@ -738,9 +740,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import xgboost as xgb\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -1161,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1398,9 +1408,9 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       1.00      1.00      1.00      8012\n",
-      "           2       1.00      1.00      1.00      8017\n",
-      "           3       1.00      1.00      1.00      3782\n",
+      "           1       1.00      0.99      1.00      8051\n",
+      "           2       1.00      1.00      1.00      8042\n",
+      "           3       1.00      1.00      1.00      3718\n",
       "\n",
       "    accuracy                           1.00     19811\n",
       "   macro avg       1.00      1.00      1.00     19811\n",
@@ -1476,7 +1486,7 @@
     }
    ],
    "source": [
-    "adboost_with_pca = AdaBoostClassifier(n_estimators=100, random_state=93)\n",
+    "adboost_with_pca = AdaBoostClassifier(n_estimators=400, random_state=93)\n",
     "adboost_with_pca.fit(pca.transform(X_train),y_train)\n",
     "y_pred = adboost_with_pca.predict(pca.transform(X_test))\n",
     "print(classification_report(y_pred,y_test))"
@@ -1601,7 +1611,7 @@
     }
    ],
    "source": [
-    "rnd_clf = RandomForestClassifier(n_estimators=100,max_depth=100)\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=100,max_depth=100,n_jobs=-1)\n",
     "rnd_clf = rnd_clf.fit(X_train,y_train)\n",
     "y_pred = rnd_clf.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
